[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ui/bucket.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/ruler.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/rect.png" type="Texture" id=3]
[ext_resource path="res://scenes/ui/ToolUnit.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/ui/ToolPanel.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/move.png" type="Texture" id=6]
[ext_resource path="res://scenes/ui/FlatBtn.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/ui/rects.png" type="Texture" id=8]
[ext_resource path="res://resource/my_theme.tres" type="Theme" id=9]

[node name="ToolPanel" type="Panel"]
margin_right = 76.0
margin_bottom = 188.0
rect_min_size = Vector2( 64, 92 )
theme = ExtResource( 9 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 68.0
margin_bottom = 33.0
text = "Tools"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 37.0
margin_right = 68.0
margin_bottom = 41.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 68.0
margin_bottom = 185.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pencil" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]

[node name="Ruler" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
margin_left = 36.0
margin_right = 68.0
texture = ExtResource( 2 )
id = 1

[node name="Rect" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
margin_top = 36.0
margin_bottom = 68.0
texture = ExtResource( 3 )
id = 2

[node name="RectS" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
margin_left = 36.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 68.0
texture = ExtResource( 8 )
id = 3

[node name="Bucket" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
margin_top = 72.0
margin_bottom = 104.0
texture = ExtResource( 1 )
id = 4

[node name="Dragger" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
margin_left = 36.0
margin_top = 72.0
margin_right = 68.0
margin_bottom = 104.0
texture = ExtResource( 6 )
id = 5

[node name="Undo" parent="VBoxContainer/GridContainer" instance=ExtResource( 7 )]
margin_top = 108.0
margin_bottom = 140.0

[node name="Redo" parent="VBoxContainer/GridContainer" instance=ExtResource( 7 )]
margin_left = 36.0
margin_top = 108.0
margin_right = 68.0
margin_bottom = 140.0
flip_h = true

[node name="Tween" type="Tween" parent="."]
[connection signal="tool_selected" from="VBoxContainer/GridContainer/Pencil" to="." method="_on_tool_selected"]
[connection signal="tool_selected" from="VBoxContainer/GridContainer/Ruler" to="." method="_on_tool_selected"]
[connection signal="tool_selected" from="VBoxContainer/GridContainer/Rect" to="." method="_on_tool_selected"]
[connection signal="tool_selected" from="VBoxContainer/GridContainer/RectS" to="." method="_on_tool_selected"]
[connection signal="tool_selected" from="VBoxContainer/GridContainer/Bucket" to="." method="_on_tool_selected"]
[connection signal="tool_selected" from="VBoxContainer/GridContainer/Dragger" to="." method="_on_tool_selected"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Undo" to="." method="_on_Undo_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Redo" to="." method="_on_Redo_pressed"]
